testsuite/poke.pkl/strings-esc-diag-1.pk
/* { dg-do compile } */

defvar s = "a\0b"; /* { dg-error "" } */
